--- a/lab1/yoda.html
+++ b/lab1/yoda.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <title>
+            The Force Awakens
+        </title>
+        <link rel='shortcut icon' type='image/png' href='img/favicon.ico'>
     </head>
     <body>
 
